--- a/package.json
+++ b/package.json
@@ -30,9 +30,11 @@
   "devDependencies": {
     "@babel/core": "7.1.0",
     "@babel/plugin-proposal-class-properties": "^7.4.4",
+    "@babel/plugin-transform-runtime": "^7.4.4",
     "@babel/preset-env": "7.1.0",
     "@babel/preset-react": "7.0.0",
     "babel-loader": "8.0.2",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "css-loader": "1.0.0",
     "gh-pages": "2.0.0",
     "html-webpack-plugin": "3.2.0",
